[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digimarks"
version = "1.1.99"
authors = [
    {name = "Michiel Scholten", email = "michiel@diginaut.net"},
]
description='Simple bookmarking service, using a SQLite database to store bookmarks, supporting tags, automatic title fetching and REST API calls.'
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["bookmarks", "api"]
license = {text = "Apache"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "importlib-metadata; python_version<'3.8'",
    "fastapi[all]",
    "pydantic>2.0",
    "requests",
    "bs4",
    "feedgen"
]
# dynamic = ["version"]

[project.scripts]
my-script = "digimarks:app"

[project.urls]
"Homepage" = "https://github.com/aquatix/digimarks"
"Bug Tracker" = "https://github.com/aquatix/digimarks/issues"

[tool.black]
line-length = 120

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    "example_config/gunicorn_digimarks_conf.py",
    "example_config/settings.py",
]
line-length = 120

[tool.ruff.format]
# Prefer single quotes over double quotes
quote-style = "single"

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = [
    "C9",
    "D",
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10
